fixed h2 and searchbar to be aligned at center

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,9 +23,17 @@ body {
   color: #fff;
   text-align: center;
 }
-
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+h2 {
+  margin-left: 30px;
+}
 #search-item {
-  width: 90%;
+  min-width: 250px;
   border: 3px solid #00b4cc;
   border-right: none;
   padding: 15px;
